# TUM_2023

./: README.md
ros_main_pc/tomm_base_ws_local/src/skin/gazebo_skin_plugin/: CMakeLists.txt  README.md  package.xml  skin_sensor.xml
ros_main_pc/tomm_base_ws_local/src/skin/gazebo_skin_plugin/include/gazebo_skin_plugin/: skin_sensor.h  skin_sensor_plugin.h
ros_main_pc/tomm_base_ws_local/src/skin/gazebo_skin_plugin/src/: register_skin_sensor.cpp  skin_sensor.cpp  skin_sensor_plugin.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/: CMakeLists.txt  README.md
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/Arms/motions/: ics_motions.yaml  ics_motions_tom.yaml  tom_zeros.yaml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/Cameras/Parameters/: color_range.yml  extrinsics.yml  extrinsics.yml.old  intrinsics.yml  intrinsics.yml.old  process_teaching_gui_params.yml  task_inference_params_left.yml  task_inference_params_right.yml  task_learning_params.yml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/Documents/: .~lock.patch_frame_info.ods#  patch_frame_info.ods
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/Omnibase/: omnibase_attmitance.yaml  omnibase_driver.yaml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/ScriptManager/Scripts/: lacqueyRightTest  scriptManagerRightArmAndGripper  scriptManagerRightTest  scriptManagerUR3  scriptManagerUR3Simple  simpleScript
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/Skills/: skills_default.yaml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_configs/launch/: tomm_upload_full_skin.launch
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/: CMakeLists.txt  README.md
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/launch/: upload_tomm.launch
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/meshes/base/: green_parts.STL  green_parts.dae  green_parts_collision.STL  green_parts_collision.dae  item_profile_collision.STL  item_profile_collision.dae  logo_blue.STL  logo_blue.dae  logo_grey.STL  logo_grey.dae
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/meshes/head/: Neck_left.STL  Neck_right.STL  Upper_head.STL  head.stl
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/meshes/objects/: TOMMBox.STL  TOMMTABLE.STL
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/robots/: tom_full.urdf.xacro  tom_lacquey.urdf.xacro  tom_no_hands.urdf.xacro  tom_table.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/: common.xacro  gazebo.urdf.xacro  materials.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/arm/: arms.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/base/: base.gazebo  base.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/hand/: hands.urdf.xacro  no_hands.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/lacquey/: grippers.urdf.xacro  lacquey.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/sensors/: asus_xtiion_pro.urdf.xacro  ftsensor.gazebo.xacro  lidar.gazebo.xacro  lidar.urdf.xacro  skin.gazebo.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/skin/: full_skin.urdf.xacro  hands_skin.urdf.xacro  left_arm_skin.urdf.xacro  right_arm_skin.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_description/urdf/wheels/: wheels.transmission.xacro  wheels.urdf.xacro
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_gazebo/: CMakeLists.txt  README.md  tomm_hardware_gazebo_plugins.xml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_gazebo/include/tomm_hardware_gazebo/: tomm_default_robot_hw_sim.h  tomm_hardware_gazebo.h  utilities.h
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_gazebo/src/: tomm_default_robot_hw_sim.cpp  tomm_hardware_gazebo.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/: CMakeLists.txt  package.xml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/configs/arm/: internal_pid.yaml  left_arm_config.yaml  right_arm_config.yaml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/configs/omnibase/: omnibase_driver.yaml
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/include/tomm_hardware_real/: tomm_hardware_real.h
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/launch/: test_arm_interface.launch  test_base_configs_loading.launch  test_base_interface.launch  tomm_hardware_real.launch
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/msg/: DriverState.msg  OmniBaseState.msg
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/src/: tomm_hardware_real.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/src/applications/: tomm_hardware_real_node.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/src/arm/: arm_comm_interface.cpp  arm_configs.cpp  arm_interface.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/src/omnibase/: omnibase_configs.cpp  omnibase_interface.cpp  omnibase_rt_driver.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/tomm_hardware_real/src/tests/: test_arm_configs_loading.cpp  test_arm_interface.cpp  (+3 more)
ros_main_pc/tomm_base_ws_local/src/tomm-robot/ur_script_manager/: CMakeLists.txt
ros_main_pc/tomm_base_ws_local/src/tomm-robot/ur_script_manager/launch/: robot_script_manager_left.launch  robot_script_manager_right.launch
ros_main_pc/tomm_base_ws_local/src/tomm-robot/ur_script_manager/src/: ConsoleReader.cpp  RobotScriptManager.cpp  ScriptLoader.cpp  ScriptManager.cpp
ros_main_pc/tomm_base_ws_local/src/tomm-robot/ur_script_manager/srv/: getScriptManagerStates.srv  setScriptManagerState.srv
ros_main_pc/tomm_base_ws_local/src/utilities/yaml_parameters/: CMakeLists.txt  README.md  package.xml
ros_main_pc/tomm_base_ws_local/src/utilities/yaml_parameters/configs/: test.yaml
(+4533 files in other folders)
